<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exif_information"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:paddingTop="@dimen/margin8dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_owner"
        android:paddingStart="@dimen/margin8dp"
        android:paddingEnd="@dimen/margin8dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/cameraOwnerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin8dp"
        android:paddingEnd="@dimen/margin8dp"
        android:paddingTop="@dimen/margin8dp"
        tools:text="@string/app_name"
        android:textStyle="bold"
        />
</LinearLayout>