<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/transformationsAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/transformationsToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/app_name"
                app:titleTextColor="@android:color/white"/>

        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/image_layout"
            android:id="@+id/transformationLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/verticalBorder"
            app:layout_constraintTop_toBottomOf="@id/transformationsAppBar"
            app:layout_constraintBottom_toBottomOf="@id/reflectImageBtn"
            />

        <Button
            android:id="@+id/rotateBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rotate_string"
            app:layout_constraintTop_toBottomOf="@id/transformationsAppBar"
            app:layout_constraintStart_toEndOf="@id/verticalBorder"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin8dp"
            />

        <Button
            android:id="@+id/invertColorsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/invert_colors_string"
            app:layout_constraintTop_toBottomOf="@id/rotateBtn"
            app:layout_constraintStart_toEndOf="@id/verticalBorder"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin8dp"
            />

        <Button
            android:id="@+id/reflectImageBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/invertColorsBtn"
            app:layout_constraintStart_toEndOf="@id/verticalBorder"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/mirror_image_string"
            android:layout_marginEnd="@dimen/margin8dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/transformationsResultRecycler"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reflectImageBtn"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <android.support.constraint.Guideline
            android:id="@+id/verticalBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>